# AngelEngine

./: .gitignore  CMakeLists.txt  conanfile.py  main.cpp
.zed/: debug.json  settings.json  tasks.json
AngelScript/: main.as
source/: main.cpp
source/headers/: AngelEngine.hpp
source/src/: AngelEngine.cpp
